Hocs-3507 - Feedback from PR
* Use produce/consumes instead of manually setting headers
* Bad Request -> Internal Server error for internal server error
* Log at warn failures in MsgDocumentConverter
* Java 9 InputStream instead of Apache utils